# op

./: .editorconfig  .gitignore  .goreleaser.yaml  CREDITS  Cargo.toml  LICENSE  Makefile  README.md  go.mod  main.go  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: crate-io.yml  release.yml
cmd/: git.go  root.go
docker/: Dockerfile
internal/env/: env.go
internal/git/: git.go  git_test.go
internal/path/: path.go
internal/proc/: proc.go
internal/util/: util.go
internal/values/: values.go
scripts/: publish.sh
src/: cmd.rs  main.rs  open.rs  shared.rs
src/cmd/: git.rs  root.rs
src/open/: git.rs  kind.rs  launch.rs
src/shared/: platform.rs  shutil.rs
